--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +16,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GivemoneyActivity" />
         <activity android:name=".userdashboard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,11 +29,7 @@
         <activity android:name=".ReportDetailsActivity" />
         <activity android:name=".ReportActivity" />
         <activity android:name=".EditDeleteActivity" />
-
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-
+        <activity android:name=".GivemoneyActivity" />
         <activity android:name=".BackupActivity"></activity>
     </application>
 
